[package]
name = "hello_actix"
version = "0.1.0"
authors = ["wutb <wutb@asiainfo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.2"
serde = "1.0.114"
serde_json = "1.0.57"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
dotenv = "0.15.0"
futures = "0.3.5"
lazy_static = "1.4.0"
failure = "0.1.5"
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_warn"] }
stderrlog = "0.4.3"